<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    tools:context="sswl.caipai.ui.activity.user.UserInfoActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/main_color"
        >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:src="@mipmap/chat_back"
            android:layout_marginLeft="@dimen/text_horizontal_padding"
            android:layout_centerVertical="true"
            android:id="@+id/iv_back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editInfo"
            android:textStyle="bold"
            android:textSize="@dimen/text_title_size"
            android:textColor="@color/tv_white"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_info_divider_height"
        android:background="@color/divider"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/text_vertical_padding"
        android:paddingBottom="@dimen/text_vertical_padding"
        android:paddingLeft="@dimen/rv_padding_horizontal"
        android:paddingRight="@dimen/rv_padding_horizontal"
        android:id="@+id/rv_user_photo"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_photo"
            style="@style/UserInfoNormalTvStyle"
            />
        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/user_photo"
            app:riv_corner_radius="20dp"
            android:scaleType="centerCrop"
            android:layout_alignParentRight="true"
            android:id="@+id/iv_user_photo"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_info_divider_height"
        android:background="@color/divider"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/UserInfoRvStyle"
        android:id="@+id/rv_user_nickname"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        style="@style/UserInfoNormalTvStyle"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phoenix"
            style="@style/UserInfoNormalTvStyle"
            android:layout_alignParentRight="true"
            android:drawableRight="@mipmap/icon_right_arrow"
            android:id="@+id/tv_user_name"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_info_line_height"
        android:background="@color/pl_line"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/UserInfoRvStyle"
        android:id="@+id/rv_app_account"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_account"
            style="@style/UserInfoNormalTvStyle"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="88888888"
            style="@style/UserInfoNormalTvStyle"
            android:layout_alignParentRight="true"
            android:id="@+id/tv_app_account"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_info_line_height"
        android:background="@color/pl_line"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/UserInfoRvStyle"
        android:id="@+id/rv_user_sex"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            style="@style/UserInfoNormalTvStyle"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_sex_woman"
            android:layout_alignParentRight="true"
            android:id="@+id/iv_sex"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_info_line_height"
        android:background="@color/pl_line"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/UserInfoRvStyle"
        android:id="@+id/rv_user_sign"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_account"
            style="@style/UserInfoNormalTvStyle"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defalut_sign"
            style="@style/UserInfoNormalTvStyle"
            android:layout_alignParentRight="true"
            android:drawableRight="@mipmap/icon_right_arrow"
            android:id="@+id/tv_user_sign"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_info_line_height"
        android:background="@color/pl_line"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/UserInfoRvStyle"
        android:id="@+id/rv_user_indention"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_indetify"
            style="@style/UserInfoNormalTvStyle"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_right_arrow"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_info_divider_height"
        android:background="@color/divider"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/UserInfoRvStyle"
        android:id="@+id/rv_authention"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authention"
            style="@style/UserInfoNormalTvStyle"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_app_account"
            style="@style/UserInfoGrayTvStyle"
            android:layout_alignParentRight="true"
            android:drawableRight="@mipmap/icon_right_arrow"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_info_divider_height"
        android:background="@color/divider"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/UserInfoRvStyle"
        android:id="@+id/rv_age"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            style="@style/UserInfoNormalTvStyle"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_age"
            style="@style/UserInfoGrayTvStyle"
            android:layout_alignParentRight="true"
            android:drawableRight="@mipmap/icon_right_arrow"
            android:id="@+id/tv_age"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_info_line_height"
        android:background="@color/pl_line"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/UserInfoRvStyle"
        android:id="@+id/rv_emotion_state"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emotion_state"
            style="@style/UserInfoNormalTvStyle"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_emotion_state"
            style="@style/UserInfoGrayTvStyle"
            android:layout_alignParentRight="true"
            android:drawableRight="@mipmap/icon_right_arrow"
            android:id="@+id/tv_emotion_state"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_info_line_height"
        android:background="@color/pl_line"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/UserInfoRvStyle"
        android:id="@+id/rv_hometown"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hometown"
            style="@style/UserInfoNormalTvStyle"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            style="@style/UserInfoGrayTvStyle"
            android:layout_alignParentRight="true"
            android:drawableRight="@mipmap/icon_right_arrow"
            android:id="@+id/tv_hometown"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_info_line_height"
        android:background="@color/pl_line"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/UserInfoRvStyle"
        android:id="@+id/rv_career"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/career"
            style="@style/UserInfoNormalTvStyle"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            style="@style/UserInfoGrayTvStyle"
            android:layout_alignParentRight="true"
            android:drawableRight="@mipmap/icon_right_arrow"
            android:id="@+id/tv_career"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/divider"
        />
</LinearLayout>
