<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@mipmap/back_pop"
    android:gravity="center_horizontal"
    android:paddingBottom="20dp"
    android:id="@+id/content_container"
    >
<TextView
android:layout_width="wrap_content"
android:layout_height="0dp"
android:layout_weight="1"
android:text="@string/share"
android:textColor="@color/tv_white"
android:textSize="@dimen/textSize18"
android:gravity="center"
android:layout_marginTop="@dimen/activity_vertical_margin"
android:drawableLeft="@mipmap/icon_share_1"
android:drawablePadding="@dimen/text_horizontal_padding"
android:id="@+id/tv_share"
    />
<TextView
android:layout_width="wrap_content"
android:layout_height="0dp"
android:layout_weight="1"
android:text="@string/flash_light"
android:textColor="@color/tv_white"
android:textSize="@dimen/textSize18"
android:gravity="center"
android:layout_marginTop="@dimen/activity_vertical_margin"
android:drawableLeft="@mipmap/icon_flash_light"
android:drawablePadding="@dimen/text_horizontal_padding"
android:id="@+id/tv_flash_light"
    />
<TextView
android:layout_width="wrap_content"
android:layout_height="0dp"
android:layout_weight="1"
android:text="@string/turn_camera"
android:textColor="@color/tv_white"
android:textSize="@dimen/textSize18"
android:gravity="center"
android:layout_marginTop="@dimen/activity_vertical_margin"
android:drawableLeft="@mipmap/icon_trans_camera"
android:drawablePadding="@dimen/text_horizontal_padding"
android:id="@+id/tv_turn"
    />
    </LinearLayout>