<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sswl.caipai.ui.activity.user.PhoneLoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/main_color"
        >
        <ImageView
            android:layout_width="15dp"
            android:layout_height="25dp"
            android:src="@mipmap/chat_back"
            android:layout_marginLeft="@dimen/back_view_margin_left"
            android:layout_centerVertical="true"
            android:id="@+id/iv_back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_title_size"
            android:text="@string/pl_title"
            android:textColor="@color/main_sub_color"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ed_login_input_back"
        android:layout_marginTop="@dimen/pl_margin_top"
        android:layout_marginLeft="@dimen/pl_margin_left"
        android:layout_marginRight="@dimen/pl_margin_right"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pl_country"
            android:paddingTop="@dimen/text_vertical_padding"
            android:paddingBottom="@dimen/text_vertical_padding"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/pl_margin_left"
        android:paddingRight="@dimen/pl_margin_right"
        android:layout_marginTop="@dimen/pl_margin_top"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pl_validate"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/text_vertical_padding"
            android:paddingBottom="@dimen/text_vertical_padding"
            android:id="@+id/tv_validate"
            android:background="@color/main_color"
            android:textColor="@color/main_sub_color"
            android:paddingLeft="@dimen/text_horizontal_padding"
            android:paddingRight="@dimen/text_horizontal_padding"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ed_login_input_back"
            android:paddingTop="@dimen/text_vertical_padding"
            android:paddingBottom="@dimen/text_vertical_padding"
            android:paddingLeft="@dimen/text_horizontal_padding"
            android:hint="@string/pl_prompt_phone"
            android:layout_toLeftOf="@id/tv_validate"
            android:layout_marginRight="@dimen/pl_margin_ed"
            android:id="@+id/ed_phone_number"
            android:textSize="@dimen/pl_tv_normal_size"
            android:textColor="@color/pl_tv_gray"
            />
    </RelativeLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ed_login_input_back"
        android:paddingTop="@dimen/text_vertical_padding"
        android:paddingBottom="@dimen/text_vertical_padding"
        android:paddingLeft="@dimen/text_horizontal_padding"
        android:layout_marginLeft="@dimen/pl_margin_left"
        android:layout_marginRight="@dimen/pl_margin_right"
        android:layout_marginTop="@dimen/pl_margin_top"
        android:hint="@string/pl_prompt_code"
        android:id="@+id/ed_validate_code"
        android:textSize="@dimen/pl_tv_normal_size"
        android:textColor="@color/pl_tv_gray"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_login_yellow_back"
            android:paddingTop="@dimen/text_vertical_padding"
            android:paddingBottom="@dimen/text_vertical_padding"
            android:paddingLeft="@dimen/text_horizontal_padding"
            android:layout_marginLeft="@dimen/pl_margin_left"
            android:layout_marginRight="@dimen/pl_margin_right"
            android:layout_marginTop="@dimen/pl_margin_top"
            android:text="@string/pl_login"
            android:gravity="center"
            android:id="@+id/tv_login"
            android:textColor="@color/main_color"
            />
</LinearLayout>
