<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/mine_divider"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/text_vertical_padding"
            android:paddingBottom="@dimen/text_vertical_padding"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/action_view_margin_right"
            android:layout_marginRight="@dimen/action_view_margin_right"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cp_contribute_list"
                android:textColor="@color/tv_normal"
                android:textSize="16sp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_right_arrow"
                android:layout_alignParentRight="true"
                android:id="@+id/icon_right_arrow"
                />
            <HorizontalScrollView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/icon_right_arrow"
                ></HorizontalScrollView>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/mine_divider"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textSize="15sp"
                    android:paddingTop="@dimen/text_vertical_padding"
                    android:paddingBottom="@dimen/text_vertical_padding"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emotion_state"
                    android:textSize="15sp"
                    android:paddingTop="@dimen/text_vertical_padding"
                    android:paddingBottom="@dimen/text_vertical_padding"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hometown"
                    android:textSize="15sp"
                    android:paddingTop="@dimen/text_vertical_padding"
                    android:paddingBottom="@dimen/text_vertical_padding"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/career"
                    android:textSize="15sp"
                    android:paddingTop="@dimen/text_vertical_padding"
                    android:paddingBottom="@dimen/text_vertical_padding"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cp_account"
                    android:textSize="15sp"
                    android:paddingTop="@dimen/text_vertical_padding"
                    android:paddingBottom="@dimen/text_vertical_padding"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_sign"
                    android:textSize="15sp"
                    android:paddingTop="@dimen/text_vertical_padding"
                    android:paddingBottom="@dimen/text_vertical_padding"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingTop="@dimen/text_vertical_padding"
                    android:paddingBottom="@dimen/text_vertical_padding"
                    android:textColor="@color/tv_normal"
                    android:id="@+id/tv_age"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingTop="@dimen/text_vertical_padding"
                    android:paddingBottom="@dimen/text_vertical_padding"
                    android:id="@+id/tv_emotion_state"
                    android:textColor="@color/tv_normal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingTop="@dimen/text_vertical_padding"
                    android:paddingBottom="@dimen/text_vertical_padding"
                    android:textColor="@color/tv_normal"
                    android:id="@+id/tv_hometown"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingTop="@dimen/text_vertical_padding"
                    android:paddingBottom="@dimen/text_vertical_padding"
                    android:id="@+id/tv_career"
                    android:textColor="@color/tv_normal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingTop="@dimen/text_vertical_padding"
                    android:paddingBottom="@dimen/text_vertical_padding"
                    android:id="@+id/tv_account"
                    android:textColor="@color/tv_normal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingTop="@dimen/text_vertical_padding"
                    android:paddingBottom="@dimen/text_vertical_padding"
                    android:textColor="@color/tv_normal"
                    android:id="@+id/tv_user_sign"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>