<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cl_background"
    tools:context="sswl.caipai.ui.activity.room.CreateLiveActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:id="@+id/rv_title"
        >
        <Spinner
            android:layout_centerVertical="true"
            android:id="@+id/video_type"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:entries="@array/languages"
            android:layout_marginLeft="@dimen/text_horizontal_padding"
            android:background="@color/main_color"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_quit"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/text_horizontal_padding"
            android:id="@+id/iv_cancel"
            />
    </RelativeLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ed_margin_horizontal"
        android:layout_marginRight="@dimen/ed_margin_horizontal"
        android:layout_below="@+id/rv_title"
        android:layout_marginTop="@dimen/ed_margin_vertical"
        android:background="@null"
        android:hint="@string/cl_ed_hint"
        android:textColor="@color/tv_white"
        android:textColorHint="@color/tv_white"
        android:gravity="center"
        android:paddingTop="@dimen/ed_margin_vertical"
        android:id="@+id/ed_live_title"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ed_margin_horizontal"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/tv_gray"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/add_theme"
                android:textColorHint="@color/tv_gray"
                />
            <View
                android:layout_width="@dimen/user_info_line_height"
                android:layout_height="match_parent"
                android:background="@color/tv_gray"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/location"
                android:textColor="@color/tv_white"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/textSize18"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ed_margin_vertical"
            android:layout_marginRight="@dimen/ed_margin_horizontal"
            android:layout_marginLeft="@dimen/ed_margin_horizontal"
            ></LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/text_vertical_padding"
            android:paddingBottom="@dimen/text_vertical_padding"
            android:gravity="center"
            android:background="@drawable/tv_login_yellow_back"
            android:text="@string/start_living"
            android:textStyle="bold"
            android:textColor="@color/main_color"
            android:textSize="@dimen/textSize18"
            android:id="@+id/tv_start_living"
            />
    </LinearLayout>
</RelativeLayout>
